# MandelbrotSet

./: CMakeLists.txt  README.md  main.cpp
include/: CUDA_wrappers.hpp
src/: CUDA.cu
